# SobesDelta

./: README.md
SobesDelta/: CMakeLists.txt  main.cpp
SobesDelta/inc/: Token.h  evaluator.h  lexer.h  parser.h
SobesDelta/src/: Token.cpp  evaluator.cpp  lexer.cpp  parser.cpp
